[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
 
[project]
name = "web-test-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.9.0",
    "playwright>=1.44.0",
    "openpyxl>=3.1.2",
]
 
[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "utils*"]
 